cv: show Blondev Python freelance job

--- a/Gianfranco_Palumbo_CV.html
+++ b/Gianfranco_Palumbo_CV.html
@@ -207,19 +207,19 @@
       }
       td.td10 {
         width: 104px;
-        height: 272px;
+        height: 194px;
       }
       td.td11 {
         width: 370px;
-        height: 272px;
+        height: 194px;
       }
       td.td12 {
         width: 104px;
-        height: 217px;
+        height: 218px;
       }
       td.td13 {
         width: 370px;
-        height: 217px;
+        height: 218px;
       }
       td.td14 {
         width: 481px;
@@ -272,18 +272,10 @@
             <p class="p4">
               <span class="s2">Email:</span
               ><span class="s3">
-                <a href="mailto:gianpa@gmail.com?subject="
-                  ><span class="s4">gianpa@gmail.com</span></a
-                >
-                -</span
+                <a href="mailto:gianpa@gmail.com?subject="><span class="s4">gianpa@gmail.com</span></a> -</span
               ><span class="s2">
-                Links:
-                <a href="https://www.linkedin.com/in/gianpaj/"
-                  ><span class="s5">LinkedIn</span></a
-                >,
-                <a href="https://github.com/gianpaj"
-                  ><span class="s5">GitHub</span></a
-                ></span
+                Links: <a href="https://www.linkedin.com/in/gianpaj/"><span class="s5">LinkedIn</span></a
+                >, <a href="https://github.com/gianpaj"><span class="s5">GitHub</span></a></span
               ><span class="s3"
                 >,
                 <a href="https://stackoverflow.com/users/728287/gianfranco-p"
@@ -321,37 +313,22 @@
             <p class="p5"><br /></p>
           </td>
           <td valign="top" class="td7">
-            <p class="p11">
-              Senior Full-stack Engineer | Contract | Full-time [Travel sector]
-            </p>
+            <p class="p11">Senior Full-stack Engineer | Contract | Full-time [Travel sector]</p>
             <p class="p12">
-              Company:
-              <a href="https://www.cartrawler.com"
-                ><span class="s6">CarTrawler</span></a
-              >
-              – Location: Malaga, Spain (from Oct 2022)
+              Company: <a href="https://www.cartrawler.com"><span class="s6">CarTrawler</span></a> – Location: Malaga,
+              Spain (from Oct 2022)
             </p>
             <p class="p13"><br /></p>
             <ul class="ul1">
               <li class="li14">
-                Build Progressive Web Apps (PWAs) using Astro and Preact to use
-                Server-Side Rendering (SSR).
+                Build Progressive Web Apps (PWAs) using Astro and Preact to use Server-Side Rendering (SSR).
               </li>
+              <li class="li14">Develop React Native applications with TypeScript and Redux for mobility partners.</li>
               <li class="li14">
-                Develop React Native applications with TypeScript and Redux for
-                mobility partners.
+                Utilise CMS (Contentful) and Figma to dynamically style the User Interface for partners.
               </li>
-              <li class="li14">
-                Utilise CMS (Contentful) and Figma to dynamically style the User
-                Interface for partners.
-              </li>
-              <li class="li14">
-                Write Integration and unit tests with Detox, Jest and Enzyme
-              </li>
-              <li class="li14">
-                Write iOS (Swift, Objective-c) and Android (Kotlin, Java) custom
-                code.
-              </li>
+              <li class="li14">Write Integration and unit tests with Detox, Jest and Enzyme</li>
+              <li class="li14">Write iOS (Swift, Objective-c) and Android (Kotlin, Java) custom code.</li>
             </ul>
             <p class="p5"><br /></p>
           </td>
@@ -363,99 +340,57 @@
             <p class="p5"><br /></p>
           </td>
           <td valign="top" class="td9">
-            <p class="p11">
-              Co-founder and CTO [Marketplace, Mobile Commerce, Fashion]
-            </p>
+            <p class="p11">Co-founder and CTO [Marketplace, Mobile Commerce, Fashion]</p>
             <p class="p12">
-              Company:
-              <a href="https://wellfound.com/company/onova"
-                ><span class="s6">Onova</span></a
-              >
-              – Location: Lviv, Ukraine
+              Company: <a href="https://wellfound.com/company/onova"><span class="s6">Onova</span></a> – Location: Lviv,
+              Ukraine
             </p>
             <p class="p13"><br /></p>
             <ul class="ul1">
+              <li class="li14">Driving the full product development from conception to launch.</li>
+              <li class="li14">Develop 2 mobile applications, 2 websites and back-end services</li>
+              <li class="li14">Develop 2 React Native (Android and iOS) apps for different markets.</li>
+              <li class="li14">Develop the backend API services using Node.js, MongoDB and a Job Scheduler.</li>
               <li class="li14">
-                Driving the full product development from conception to launch.
-              </li>
-              <li class="li14">
-                Develop 2 mobile applications, 2 websites and back-end services
-              </li>
-              <li class="li14">
-                Develop 2 React Native (Android and iOS) apps for different
-                markets.
-              </li>
-              <li class="li14">
-                Develop the backend API services using Node.js, MongoDB and a
-                Job Scheduler.
-              </li>
-              <li class="li14">
-                Write Integration tests for the REST API back-end services and
-                React Native mobile app using Jest.
+                Write Integration tests for the REST API back-end services and React Native mobile app using Jest.
               </li>
               <li class="li14">Use</li>
               <ul class="ul1">
+                <li class="li14">Google Cloud Storage (GCS) for image hosting.</li>
+                <li class="li14">Firebase Cloud Messaging (FCM) for Push notifications.</li>
                 <li class="li14">
-                  Google Cloud Storage (GCS) for image hosting.
-                </li>
-                <li class="li14">
-                  Firebase Cloud Messaging (FCM) for Push notifications.
-                </li>
-                <li class="li14">
-                  Local payment (complex) and shipping services provider. There
-                  was no Stripe or PayPal in Ukraine at the time.
+                  Local payment (complex) and shipping services provider. There was no Stripe or PayPal in Ukraine at
+                  the time.
                 </li>
               </ul>
               <li class="li14">
-                Use continuous deployment and deploy the back-end services on
-                Amazon Web Services (AWS) EC2 instance.
+                Use continuous deployment and deploy the back-end services on Amazon Web Services (AWS) EC2 instance.
               </li>
-              <li class="li14">
-                Monitor all front-end and back-end services with Sentry and
-                NewRelic.
-              </li>
+              <li class="li14">Monitor all front-end and back-end services with Sentry and NewRelic.</li>
             </ul>
           </td>
         </tr>
         <tr>
           <td valign="top" class="td10">
-            <p class="p10">Jan 2016 –</p>
-            <p class="p10">Nov 2017</p>
+            <p class="p10">Jan 2020 –</p>
+            <p class="p10">current</p>
             <p class="p5"><br /></p>
           </td>
           <td valign="top" class="td11">
-            <p class="p11">Full Stack Developer | Contractor | Full-time</p>
-            <p class="p12">
-              Company: Irish Distillers Pernod Ricard – Location: Dublin,
-              Ireland
-            </p>
+            <p class="p11">Full Stack Engineer | Contractor | Part-time</p>
+            <p class="p12">Company: Blondev Inc – Location: New York (Remote)</p>
             <p class="p13"><br /></p>
             <ul class="ul1">
               <li class="li14">
-                Collaborate with a team of 5 to develop e-commerce and product
-                information websites for a list of alcohol brands such as
-                <a href="http://jamesonwhiskey.com"
-                  ><span class="s6">jamesonwhiskey.com</span></a
-                >
-                and
-                <a href="http://redbreastwhiskey.com"
-                  ><span class="s6">redbreastwhiskey.com</span></a
-                >
+                Using Python (Flask and FastAPI), Google App Engine, MongoDB (Atlas) to create custom full-stack
+                applications.
               </li>
               <li class="li14">
-                Transform graphic designs from a design agency into
-                comprehensive technical requirements and verify accurate
-                implementation of all design elements.
-              </li>
-              <li class="li14">Use Symphony PHP and Shopify.</li>
-              <li class="li14">
-                Utilise scrum methodologies to estimate and work on 2-week
-                sprints, ensuring timely and efficient completion of all
-                projects.
+                Deploy multiple web apps using: React, Stripe, Next.js, OpenAI API (Dall-e and ChatGTP models), AWS
+                Bedrock, Langchain, MongoDB vector search, SendGrid for emails
               </li>
               <li class="li14">
-                Leverage AWS services like EC2, RDS, CloudWatch logs, SES, and
-                S3 for seamless website operation and enhanced user experience.
+                Test LLM (Large Language Models) using Google Colab with RAG (Retrieval-Augmented Generation ) technique
               </li>
             </ul>
             <p class="p5"><br /></p>
@@ -468,35 +403,27 @@
             <p class="p5"><br /></p>
           </td>
           <td valign="top" class="td13">
-            <p class="p11">
-              Web Development Career Path Mentor | Contract | Part-time
-            </p>
+            <p class="p11">Web Development Career Path Mentor | Contract | Part-time</p>
             <p class="p12">
               Company:
-              <a
-                href="https://www.thinkful.com/bootcamp/web-development/flexible/"
+              <a href="https://www.thinkful.com/bootcamp/web-development/flexible/"
                 ><span class="s6">Thinkful - Coding Bootcamp</span></a
               ><span class="s7"> </span>– Location: Remote
             </p>
             <p class="p15"><br /></p>
             <p class="p16">
-              I provided students with technical and professional guidance to
-              help them transition from being curious learners to becoming
-              successful technologists. Responsibilities:
+              I provided students with technical and professional guidance to help them transition from being curious
+              learners to becoming successful technologists. Responsibilities:
             </p>
             <ul class="ul1">
               <li class="li14">
-                Offer personalized support to students through online video
-                sessions, providing feedback and guiding them through the
-                curriculum.
+                Offer personalized support to students through online video sessions, providing feedback and guiding
+                them through the curriculum.
               </li>
               <li class="li14">
-                Help numerous students overcome getting blocked by concepts and
-                gain confidence in their abilities.
+                Help numerous students overcome getting blocked by concepts and gain confidence in their abilities.
               </li>
-              <li class="li14">
-                Teach modern JavaScript, HTML, CSS, Git and, Node.js.<br />
-              </li>
+              <li class="li14">Teach modern JavaScript, HTML, CSS, Git and, Node.js.<br /></li>
             </ul>
           </td>
         </tr>
@@ -513,9 +440,7 @@
         <tr>
           <td valign="top" class="td15">
             <p class="p17">
-              <span class="s7"
-                >2008 - 2012<span class="Apple-tab-span"> </span>BSc (Hons) in
-                Computer Science, </span
+              <span class="s7">2008 - 2012<span class="Apple-tab-span"> </span>BSc (Hons) in Computer Science, </span
               >Dublin Institute of Technology<br />
               (TU Dublin), Kevin St.
             </p>
@@ -525,8 +450,8 @@
         <tr>
           <td valign="top" class="td16">
             <p class="p18">
-              2001 - 2006<span class="Apple-tab-span"> </span>Maturità
-              Scientifica (Italian Leaving Certificate)<span class="s8"
+              2001 - 2006<span class="Apple-tab-span"> </span>Maturità Scientifica (Italian Leaving Certificate)<span
+                class="s8"
                 >, <br />
                 Liceo Scientifico Statale Leonardo Da Vinci, Genoa, Italy</span
               >
@@ -557,17 +482,15 @@
         <tr>
           <td colspan="2" valign="top" class="td18">
             <p class="p7"><br /></p>
-            <p class="p8">
-              miscellaneous<span class="Apple-converted-space"> </span>
-            </p>
+            <p class="p8">miscellaneous<span class="Apple-converted-space"> </span></p>
             <p class="p5"><br /></p>
           </td>
         </tr>
         <tr>
           <td colspan="2" valign="top" class="td19">
             <p class="p18">
-              First computer<span class="Apple-tab-span"> </span>Compaq Presario
-              412 (386 processor) in 1995 (8 years old)
+              First computer<span class="Apple-tab-span"> </span>Compaq Presario 412 (386 processor) in 1995 (8 years
+              old)
             </p>
           </td>
         </tr>
