add dj-mixes.html and fix ribbon in index.html

--- a/index.html
+++ b/index.html
@@ -77,35 +77,7 @@
           width: 80%;
         }
       }
-      #badge {
-        position: relative;
-      }
-      #badge div {
-        position: absolute;
-        top: 0;
-        right: 0;
-      }
-    </style>
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Person",
-        "name": "Gianfranco Palumbo",
-        "url": "https://gian.cool",
-        "sameAs": [
-          "https://www.threads.net/@gianpaj",
-          "https://www.instagram.com/gianpaj",
-          "https://twitter.com/gianpaj",
-          "https://github.com/gianpaj",
-          "https://www.linkedin.com/in/gianpaj"
-        ]
-      }
-    </script>
-  </head>
-
-  <body>
-    <style>
-      #forkongithub a {
+      #djmixes a {
         background: #000;
         color: #fff;
         text-decoration: none;
@@ -127,12 +99,11 @@
         -o-transform: rotate(45deg);
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
       }
-      #forkongithub a:hover {
-        background: #fff;
-        color: #fff;
+      #djmixes a:hover {
+        background: #ddd;
       }
-      #forkongithub a::before,
-      #forkongithub a::after {
+      #djmixes a::before,
+      #djmixes a::after {
         content: "";
         width: 100%;
         display: block;
@@ -142,12 +113,12 @@
         height: 1px;
         background: #fff;
       }
-      #forkongithub a::after {
+      #djmixes a::after {
         bottom: 1px;
         top: auto;
       }
       @media screen and (min-width: 800px) {
-        #forkongithub {
+        #djmixes {
           position: fixed;
           display: block;
           top: 0;
@@ -157,14 +128,32 @@
           height: 200px;
           z-index: 9999;
         }
-        #forkongithub a {
+        #djmixes a {
           width: 200px;
           top: 20px;
           right: -60px;
         }
       }
     </style>
-    <span id="forkongithub">
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Gianfranco Palumbo",
+        "url": "https://gian.cool",
+        "sameAs": [
+          "https://www.threads.net/@gianpaj",
+          "https://www.instagram.com/gianpaj",
+          "https://twitter.com/gianpaj",
+          "https://github.com/gianpaj",
+          "https://www.linkedin.com/in/gianpaj"
+        ]
+      }
+    </script>
+  </head>
+
+  <body>
+    <span id="djmixes">
       <a href="/dj-mixes.html">DJ Mixes</a>
     </span>
     <main>
