--- a/dj-mixes.html
+++ b/dj-mixes.html
@@ -15,7 +15,7 @@
     </h1>
 
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
-      <div class="bg-gray-100 p-4">
+      <div class="bg-gray-100 p-2 pb-0">
         <h2 class="text-2xl font-bold text-gray-900 sm:text-3xl lg:text-4xl leading-tight tracking-tight mb-2 sm:mb-4">
           <a href="https://audio.com/gianpaj/audio/techhouse-malaga-2-2024"> TechHouse - Malaga 2 - 2024 </a>
         </h2>
