add Trance - Malaga 3 - 2024

--- a/dj-mixes.html
+++ b/dj-mixes.html
@@ -17,12 +17,25 @@
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
       <div class="bg-gray-100 p-2 pb-0">
         <h2 class="text-2xl font-bold text-gray-900 sm:text-3xl lg:text-4xl leading-tight tracking-tight mb-2 sm:mb-4">
-          <a href="https://audio.com/gianpaj/audio/techhouse-malaga-2-2024"> TechHouse - Malaga 2 - 2024 </a>
+          <a href="https://audio.com/gianpaj/audio/techhouse-malaga-2-2024">TechHouse - Malaga 2 - 2024</a>
         </h2>
-        <p>Recroded on May 18th, 2024 in Malaga, Spain 🌞 at the Malaga Beach Club - aka my bedroom 🛌</p>
+        <p>Recorded on May 18th, 2024 in Malaga, Spain 🌞 at the Malaga Beach Club - aka my office 🛌<br /><br /></p>
         <div style="height: 228px; width: 100%">
           <iframe
             src="https://audio.com/embed/audio/1799464243929288?theme=image"
+            style="display: block; border-radius: 6px; border: none; height: 204px; width: 100%"
+          >
+          </iframe>
+        </div>
+      </div>
+      <div class="bg-gray-100 p-2 pb-0">
+        <h2 class="text-2xl font-bold text-gray-900 sm:text-3xl lg:text-4xl leading-tight tracking-tight mb-2 sm:mb-4">
+          <a href="https://audio.com/gianpaj/audio/trance-malaga-3-2024">Trance - Malaga 3 - 2024</a>
+        </h2>
+        <p>Recorded on July 20th, 2024 in Malaga, Spain<br /><br /><br /></p>
+        <div style="height: 228px; width: 100%">
+          <iframe
+            src="https://audio.com/embed/audio/1805046545236556?theme=image"
             style="display: block; border-radius: 6px; border: none; height: 204px; width: 100%"
           >
           </iframe>
