update CV and homepage to show Escuela.dev

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Gianfranco Palumbo ― Sofware Engineer" />
     <meta
       property="og:description"
-      content="React, Next.js, Redux, TypeScript, Python, AWS  and learning about AI/ML"
+      content="React, Next.js, TypeScript, MongoDB, Python, AWS and learning about robotics, raspberry pi"
     />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
@@ -144,7 +144,7 @@
         "sameAs": [
           "https://www.threads.net/@gianpaj",
           "https://www.instagram.com/gianpaj",
-          "https://twitter.com/gianpaj",
+          "https://x.com/gianpaj",
           "https://github.com/gianpaj",
           "https://www.linkedin.com/in/gianpaj"
         ]
@@ -161,9 +161,9 @@
         <div class="section__inner">
           <h1 class="section__header">Ciao 👋, I'm Gianfranco.</h1>
 
-          <!--         <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a> -->
+          <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p>
           <div>
-            I'm a Sofware Developer contractor at
+            I'm a Sofware Engineer at
             <a
               href="https://cartrawler.com"
               title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
@@ -184,7 +184,7 @@
             <li>Python</li>
             <li>AWS</li>
           </ul>
-          <p>And I'm learning about AI/ML and robotics 🤖</p>
+          <p>And I'm learning about robotics 🤖</p>
         </div>
       </section>
 
@@ -200,7 +200,7 @@
             <a rel="noopener noreferrer" href="https://www.threads.net/@gianpaj" target="_blank">Threads</a>
           </div>
           <div>
-            <a rel="noopener noreferrer" href="https://twitter.com/gianpaj" target="_blank">Twitter</a>
+            <a rel="noopener noreferrer" href="https://x.com/gianpaj" target="_blank">Twitter/X</a>
           </div>
           <div>
             <a rel="noopener noreferrer" href="https://www.instagram.com/gianpaj" target="_blank">Instagram</a>
