--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@
         "name": "Gianfranco Palumbo",
         "url": "https://gian.cool",
         "sameAs": [
-          "https://www.threads.net/@gianpaj",
           "https://www.instagram.com/gianpaj",
           "https://x.com/gianpaj",
           "https://github.com/gianpaj",
@@ -191,9 +190,9 @@
         <div class="section__inner">
           <h1 class="section__header">Ciao 👋, I'm Gianfranco.</h1>
 
-          <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p>
+          <!-- <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p> -->
           <div>
-            I'm a Sofware Engineer at
+            I'm a Software Engineer at
             <a
               href="https://cartrawler.com"
               title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
@@ -205,16 +204,17 @@
             <p>Living in sunny Magala, Spain 🌞</p>
           </div>
 
-          <p>My <i>core</i> skills:</p>
+          <p>My core skills:</p>
           <ul>
-            <li>React</li>
+            <li>React</li>\
+            <li>React Native</li>
             <li>Next.js</li>
             <li>TypeScript</li>
             <li>MongoDB</li>
             <li>Python</li>
             <li>AWS</li>
           </ul>
-          <p>And I'm learning about robotics 🤖</p>
+          <p>And I'm learning about Generative AI and robotics 🤖</p>
         </div>
       </section>
 
@@ -227,13 +227,7 @@
             </a>
           </div>
           <div>
-            <a rel="noopener noreferrer" href="https://www.threads.net/@gianpaj" target="_blank">Threads</a>
-          </div>
-          <div>
             <a rel="noopener noreferrer" href="https://x.com/gianpaj" target="_blank">Twitter/X</a>
-          </div>
-          <div>
-            <a rel="noopener noreferrer" href="https://www.instagram.com/gianpaj" target="_blank">Instagram</a>
           </div>
           <div>
             <a rel="noopener noreferrer" href="https://github.com/gianpaj" target="_blank">GitHub</a>
@@ -267,4 +261,3 @@
   ></script>
   <!-- End Cloudflare Web Analytics -->
 </html>
-<!-- inspired by http://sis.to -->
