--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
           <p>My core skills:</p>
           <ul>
-            <li>React</li>\
+            <li>React</li>
             <li>React Native</li>
             <li>Next.js</li>
             <li>TypeScript</li>
