--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
@@ -188,21 +188,10 @@
     <main>
       <section class="section">
         <div class="section__inner">
-          <h1 class="section__header">Ciao 👋, I'm Gianfranco.</h1>
+          <h1 class="section__header">Ciao 👋, I'm Gianfranco</h1>
 
-          <!-- <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p> -->
-          <div>
-            I'm a Software Engineer at
-            <a
-              href="https://cartrawler.com"
-              title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
-              target="_blank"
-              rel="noopener noreferrer"
-              >CarTrawler</a
-            >
-            - a B2B Car Rental & Taxi Marketplace.
-            <p>Living in sunny Magala, Spain 🌞</p>
-          </div>
+          <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p>
+          <div>I'm a Software Engineer living in sunny Magala, Spain 🌞</div>
 
           <p>My core skills:</p>
           <ul>
@@ -212,9 +201,9 @@
             <li>TypeScript</li>
             <li>MongoDB</li>
             <li>Python</li>
-            <li>AWS</li>
+            <li>AWS & Vercel</li>
           </ul>
-          <p>And I'm learning about Generative AI and robotics 🤖</p>
+          <p>And I'm learning about Generative AI (text and audio) 🤖</p>
         </div>
       </section>
 
