--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Gianfranco Palumbo ― Sofware Engineer</title>
-    <meta name="description" content="React, Next.js, TypeScript, Python, AWS and learning about AI/ML and robotics" />
+    <meta name="description" content="React, Next.js, TypeScript, Python, AWS and learning about AI/ML" />
 
     <meta property="og:title" content="Gianfranco Palumbo ― Sofware Engineer" />
     <meta
       property="og:description"
-      content="React, Next.js, TypeScript, MongoDB, Python, AWS and learning about robotics, raspberry pi"
+      content="React, Next.js, TypeScript, MongoDB, Python, AWS and learning about AI/ML"
     />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
@@ -190,7 +190,8 @@
         <div class="section__inner">
           <h1 class="section__header">Ciao 👋, I'm Gianfranco</h1>
 
-          <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p>
+          <!-- <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p> -->
+          <p>I'm working on 🎙️ <a href="https://sexyVoice.ai">SexyVoice.ai/a> - Free Realistic Text to Speech & AI Voice Generator</p>
           <div>I'm a Software Engineer living in sunny Magala, Spain 🌞</div>
 
           <p>My core skills:</p>
