fix link to sexyvoice.ai

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <h1 class="section__header">Ciao 👋, I'm Gianfranco</h1>
 
           <!-- <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p> -->
-          <p>I'm working on 🎙️ <a href="https://sexvoice.ai">SexyVoie.ai</a> - Free Realistic Text to Speech & AI Voice Generator</p>
+          <p>I'm working on 🎙️ <a href="https://seyvoice.ai">SexyVoice.ai</a> - Free Realistic Text to Speech & AI Voice Generator</p>
           <div>I'm a Software Engineer living in sunny Magala, Spain 🌞</div>
 
           <p>My core skills:</p>
