add new dj mix and hide CV

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       }
 
       body {
-        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, Arial,
-          sans-serif;
+        font-family:
+          -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, Arial, sans-serif;
         font-size: 1rem;
         font-style: normal;
         font-weight: 400;
@@ -191,7 +191,10 @@
           <h1 class="section__header">Ciao 👋, I'm Gianfranco</h1>
 
           <!-- <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p> -->
-          <p>I'm working on 🎙️ <a href="https://seyvoice.ai">SexyVoice.ai</a> - Free Realistic Text to Speech & AI Voice Generator</p>
+          <p>
+            I'm working on 🎙️ <a href="https://seyvoice.ai">SexyVoice.ai</a> - Free Realistic Text to Speech & AI Voice
+            Generator
+          </p>
           <div>I'm a Software Engineer living in sunny Magala, Spain 🌞</div>
 
           <p>My core skills:</p>
@@ -227,13 +230,13 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <!--<section class="section">
         <div class="section__inner">
           <h2>My CV</h2>
 
           <a href="./Gianfranco_Palumbo_CV.html" title="HTML Gianfranco Palumbo CV">Gianfranco_Palumbo_CV.html</a>
         </div>
-      </section>
+      </section>-->
       <section class="section">
         <div class="section__inner">
           <p>Thanks for stopping by! 🚀🌐</p>
