--- a/dj-mixes.html
+++ b/dj-mixes.html
@@ -17,9 +17,22 @@
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
       <div class="bg-gray-100 p-2 pb-0">
         <h2 class="text-2xl font-bold text-gray-900 sm:text-3xl lg:text-4xl leading-tight tracking-tight mb-2 sm:mb-4">
+          <a href="https://audio.com/gianpaj/audio/transitions-4-2025">Transitions - Malaga 4 - 2025</a>
+        </h2>
+        <p>Recorded on Dec 6th, 2025<br /><s>Tracklist available</s><br /><br /></p>
+        <div style="height: 228px; width: 100%">
+          <iframe
+            src="https://audio.com/embed/audio/1850762361400999?theme=image"
+            style="display: block; border-radius: 6px; border: none; height: 204px; width: 100%"
+          >
+          </iframe>
+        </div>
+      </div>
+      <div class="bg-gray-100 p-2 pb-0">
+        <h2 class="text-2xl font-bold text-gray-900 sm:text-3xl lg:text-4xl leading-tight tracking-tight mb-2 sm:mb-4">
           <a href="https://audio.com/gianpaj/audio/pure-movements-malaga-3-2025">Pure Movements - Malaga 3 - 2025</a>
         </h2>
-        <p>Recorded on Nov 1st, 2025 in Malaga, Spain<br /><i>Tracklist available</i><br /><br /></p>
+        <p>Recorded on Nov 1st, 2025<br /><i>Tracklist available</i><br /><br /></p>
         <div style="height: 228px; width: 100%">
           <iframe
             src="https://audio.com/embed/audio/1847611611695925?theme=image"
