--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
           <!-- <p>I'm starting a coding school ➡️ <a href="https://escuela.dev">Escuela.dev</a></p> -->
           <p>
-            I'm working on 🎙️ <a href="https://seyvoice.ai">SexyVoice.ai</a> - Free Realistic Text to Speech & AI Voice
+            I'm working on 🎙️ <a href="https://sexyvoice.ai">SexyVoice.ai</a> - Free Realistic Text to Speech & AI Voice
             Generator
           </p>
           <div>I'm a Software Engineer living in sunny Magala, Spain 🌞</div>
